--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/Users/bencarpenter/Code/check51/env/bin/python3",
+    "python.pythonPath": "/usr/bin/python3",
     "python.formatting.provider": "black"
 }
